--- a/pages/contact.html
+++ b/pages/contact.html
@@ -190,7 +190,7 @@
       <div class="chat-container" style="max-width: 800px; margin: 0 auto;">
         <div class="chat-messages">
           <div class="message message-received">
-            Hello! I'm EduBot, your AI assistant powered by OpenAI. How can I help you today with our tuition services?
+            Hello! I'm EduBot, your AI assistant powered by OpenAI. I can answer your questions about our tuition services, programs, and educational approach. How can I help you today?
           </div>
         </div>
 
@@ -203,6 +203,13 @@
 
         <div style="text-align: center; margin-top: 1rem; font-size: 0.9rem; color: #666;">
           <p>This AI assistant uses OpenAI to answer your questions. For complex inquiries, please contact our team directly.</p>
+
+          <!-- Optional user identification for better chat logging -->
+          <div style="margin: 0.5rem 0; display: flex; justify-content: center; gap: 0.5rem;">
+            <input type="text" id="userIdentifier" placeholder="Your name (optional)" style="padding: 0.4rem; border: 1px solid #ddd; border-radius: 4px; font-size: 0.85rem; max-width: 200px;">
+            <button id="setUserIdBtn" class="btn btn-sm" style="background-color: #f5f5f5; color: #333; border: 1px solid #ddd;">Set</button>
+          </div>
+
           <button id="resetChatBtn" class="btn btn-sm" style="margin-top: 0.5rem; background-color: #f5f5f5; color: #333; border: 1px solid #ddd;">Reset Chat</button>
         </div>
       </div>
@@ -349,6 +356,8 @@
 
       // OpenAI Chatbot additional functionality
       const resetChatBtn = document.getElementById('resetChatBtn');
+      const setUserIdBtn = document.getElementById('setUserIdBtn');
+      const userIdentifierInput = document.getElementById('userIdentifier');
       const chatMessages = document.querySelector('.chat-messages');
 
       // Reset chat button
@@ -360,6 +369,38 @@
           // Clear the chat messages UI except for the first welcome message
           while (chatMessages.childNodes.length > 1) {
             chatMessages.removeChild(chatMessages.lastChild);
+          }
+
+          // Add a ready message
+          const readyMessage = document.createElement('div');
+          readyMessage.className = 'message message-received';
+          readyMessage.textContent = 'I\'m ready to answer your questions about our tuition services!';
+          chatMessages.appendChild(readyMessage);
+          chatMessages.scrollTop = chatMessages.scrollHeight;
+        });
+      }
+
+      // Set user identifier button
+      if (setUserIdBtn && userIdentifierInput) {
+        setUserIdBtn.addEventListener('click', function() {
+          const userId = userIdentifierInput.value.trim();
+          if (userId) {
+            // Set the user identifier in the OpenAI chat instance
+            if (window.OpenAIChat && typeof window.OpenAIChat.setUserIdentifier === 'function') {
+              window.OpenAIChat.setUserIdentifier(userId);
+
+              // Show confirmation
+              const confirmationMsg = document.createElement('div');
+              confirmationMsg.className = 'message message-received';
+              confirmationMsg.textContent = `Thank you, ${userId}! Your name has been set for this chat session.`;
+              chatMessages.appendChild(confirmationMsg);
+              chatMessages.scrollTop = chatMessages.scrollHeight;
+
+              // Disable the input and button
+              userIdentifierInput.disabled = true;
+              setUserIdBtn.disabled = true;
+              setUserIdBtn.textContent = 'Set ✓';
+            }
           }
         });
       }
